# muslimkit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
include/domain/: get_cities.h  get_prayer_times.h
include/lib/: json.h  termbox.h
include/network/: connection.h
include/presentation/: uikit.h
include/utils/: strutils.h  tmutils.h
scripts/: build.sh
src/domain/: get_cities.c  get_prayer_times.c
src/lib/: json.c
src/network/: connection.c
src/presentation/: uikit.c
src/utils/: strutils.c  tmutils.c
